# Graphics3DCode

./: .gitignore  CMakeLists.txt  DETAILS.md  DOUBLE_BUFFERING.md  EXTERNAL.md  README.md
Assignments/: DEBUGGING.md  ERRORS.md  GUIDELINES.md  README.md
Assignments/00_Triangle/: README.md
Assignments/01_House/: README.md
Assignments/02_Colors/: README.md
Assignments/03_Indices/: README.md
Assignments/04_Uniforms/: 4APPLE.md  README.md  STD140.md
Assignments/05_PVM/: README.md
Assignments/06_Pyramid/: README.md
Assignments/07_Resize/: README.md
Assignments/08_Zoom/: README.md
Assignments/09_CameraMovement/: CameraMovement.md  README.md
Assignments/10_Mesh/: Meshes.md  README.md
Assignments/11_KdMaterial/: README.md
Assignments/12_Textures/: README.md  Textures.md
Assignments/13_OBJReader/: README.md
Assignments/14_Diffuse/: README.md
Assignments/15_Specular/: README.md
Assignments/Colors/: README.md
Assignments/House/: README.md
Assignments/Indices/: README.md
Assignments/MeshesMaterials/: Materials.md  Meshes.md  README.md
Assignments/PVM/: README.md
Assignments/Phong/: PhongDiffuse.md  PhongSpecular.md
Assignments/Pyramid/: README.md
Assignments/Textures/: ObjReader.md  Textures.md
Assignments/Triangle/: README.md
Assignments/Uniforms/: README.md
Assignments/Zoom/: README.md
Models/: blue_marble.mtl  pyramid.mtl
scripts/: copy_assignment.py
src/Application/: CMakeLists.txt  RegisteredObject.cpp  RegisteredObject.h  application.cpp  application.h  debug.cpp  debug.h  shader_source.cpp  shader_source.h  stb.cpp  uniforms.cpp  uniforms.h  utils.cpp  utils.h
src/Assignments/00_Triangle/: app.cpp  main.cpp
src/Assignments/Debugging/: CMakeLists.txt  app.cpp  app.h
src/Assignments/Triangle/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/Assignments/Triangle/shaders/: base_fs.glsl  base_vs.glsl
src/Engine/: AbstractMaterial.cpp  AbstractMaterial.h  CMakeLists.txt  ColorMaterial.cpp  ColorMaterial.h  KdMaterial.cpp  KdMaterial.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  camera.h  camera_controller.h  light.h  mesh_loader.cpp  mesh_loader.h  utils.cpp  utils.h
src/Engine/shaders/: Kd_fs.glsl  Kd_vs.glsl  color_fs.glsl  color_vs.glsl
src/Geometry/: bounding_box.h  utils.h
src/OGL/: CMakeLists.txt  utils.cpp  utils.h
src/ObjectReader/: CMakeLists.txt  obj_reader.cpp  obj_reader.h  sMesh.cpp  sMesh.h
